--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack server .",
-    "build": "webpack ."
+    "build": "webpack .",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "keywords": [],
   "author": "Nikolay Kanyushkov",
@@ -28,7 +30,11 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "-": "^0.0.1",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
-  }
+    "react-dom": "^17.0.2",
+    "save-dev": "^0.0.1-security"
+  },
+  "homepage": "http://dragovich.github.io/calculator-ios"
 }
