--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/runtime": "^7.14.8",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
+    "css-loader": "^6.2.0",
     "eslint": "^7.31.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
@@ -30,11 +31,11 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "-": "^0.0.1",
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "save-dev": "^0.0.1-security"
+    "save-dev": "^0.0.1-security",
+    "style-loader": "^3.2.1"
   },
   "homepage": "http://dragovich.github.io/calculator-ios"
 }
