--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "webpack server .",
     "build": "webpack .",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d public"
   },
   "keywords": [],
   "author": "Nikolay Kanyushkov",
@@ -26,12 +26,12 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jest": "^24.3.7",
+    "gh-pages": "^3.2.3",
     "webpack": "^5.45.1",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "save-dev": "^0.0.1-security",
